themes/paprika/assets/app.css
/* ... */
img {
  display: block;
  max-width: 100%;
}

/* Header
 -------------------------------------------------- */
.header {
  font-family: LeagueGothic;
  text-transform: uppercase;
  letter-spacing: 1rem;
  display: flex;
  max-width: var(--wide);
  height: var(--header);
  margin-bottom: 2rem;
}

.header a {
  display: flex;
  flex-shrink: 0;
  align-items: center;
}

.logo {

  z-index: 1000;
  margin-top: 5rem;
  margin-left: var(--gap);
  display: flex;
  min-width: var(--side);
  padding-right: var(--gap);
}

.site-name {
  padding-bottom: 0.3rem;
  overflow: auto;
  font-size: 3.4rem;
  font-weight: 700;
  white-space: nowrap;
}

.btn-dark .circle,
.btn-dark .line {
  fill: none;
  stroke: var(--black);
  stroke-linecap: round;
  stroke-linejoin: round;
  stroke-width: 3.5;
  stroke-miterlimit: 10;
  transition: 0.25s;
  stroke-dashoffset: 0.00001px;
  stroke-dasharray: none;
}

.dark .btn-dark .circle {
  d: path("M30,11c-10.49,0-19,8.51-19,19c0,10.49,8.51,19,19,19c5.18,0,9.87-2.08,13.3-5.44c-10.37-0.15-18.73-8.58-18.73-18.99C24.57,16.52,30,11,30,11z");
}

.btn-dark .rays {
  transition: 0.25s;
}
.dark .btn-dark .rays {
  transform: matrix(0.62,0,0,0.62,11.399999999999999,11.399999999999999);
    opacity: 0;
}

.btn-dark {
  width: 4rem;
  height: 4rem;
  margin-left: 1rem;
  cursor: pointer;
}

.social {
  display: flex;
  margin-left: auto;
  align-items: center;
  gap: 1.5rem;
}

.social a {
  width: 1rem;
  height: 1rem;
  padding: 2rem;
  background: var(--url) center center no-repeat;
}

.social a.active {
  outline: 2px solid #000;
  border-radius: 50%;
  animation: outline 1s forwards;
}

.dark .social a {
  filter: invert(1);
}

@media (max-width: 1199px) {
  .logo {
    min-width: auto;
  }

  [data-menu='true'] {
    --header: 16rem;
  }

  [data-menu='true'] .header {
    position: relative;
  }

  [data-menu='true'] .header > * {
    height: calc(var(--header) / 2);
  }

  [data-menu='true'] .menu {
    position: absolute;
    inset: auto 0 0;
    border-bottom: 1px solid var(--fog);
  }

  .main {
    padding-top: 0 !important;
  }
}

/* Main
 -------------------------------------------------- */
.main {
  max-width: var(--narrow);
  min-height: calc(100% - var(--header) - var(--footer));
  padding-top: var(--y-gap);
  padding-bottom: var(--y-gap);
}

.main-title {
  margin-bottom: calc(var(--y-gap) + 1rem);
  font-size: 3rem;
  font-weight: 400;
  color: var(--lit);
}

.main-nav {
  display: flex;
  margin-top: 5rem;
}

.main-nav a {
  font-size: 1.8rem;
  line-height: 5.5rem;
  color: var(--white);
  background: var(--black);
  border-radius: 0.5rem;
  padding-inline: 3rem;
}

.main-nav .next {
  margin-left: auto;
}

/* Post entry
 -------------------------------------------------- */
.post-entry {
  position: relative;
  padding-block: 2rem;
  transition: transform 0.1s;
}

.post-entry:first-of-type {
  margin-top: -2rem;
}

.post-entry:active {
  transform: scale(0.99);
}

.post-entry h2 {
  margin-bottom: 0.2rem;
  font-size: 3rem;
}

.post-entry time {
  flex-shrink: 0;
  font-size: 1.7rem;
  color: var(--air);
}

.post-link {
  position: absolute;
  inset: 0;
}

/* Post single
 -------------------------------------------------- */
.post-title {
  margin-bottom: calc(var(--y-gap) + 1rem);
}

.post-title p {
  display: flex;
  margin-bottom: 1.5rem;
  font-size: 1.6rem;
  color: var(--air);
  transform: translateY(0.4rem);
}

.post-title p span::before {
  content: '·';
  margin-inline: 0.8rem;
}

.post-title h1 {
  font-size: 5rem;
  transform: translateX(-0.3rem);
}

.post-tags {
  margin-top: 7rem;
}

.post-tags a {
  display: inline-block;
  font-weight: 500;
  line-height: 5rem;
  color: var(--lit);
  background: rgba(var(--dark), 0.05);
  border-radius: 0.5rem;
  padding-inline: 2rem;
}

.post-tags a + a {
  margin-left: 0.5rem;
}

.post-nav {
  display: flex;
  justify-content: space-between;
  margin-top: var(--y-gap);
  background: rgba(var(--dark), 0.05);
  border-radius: 0.5rem;
}

.post-nav a {
  display: flex;
  align-items: center;
  width: 50%;
  padding: var(--gap);
  font-size: 2.4rem;
  font-weight: 700;
  line-height: 1.2;
}

.post-nav a span + span {
  margin-left: 1rem;
}

.post-nav .prev {
  padding-right: 1rem;
}

.post-nav .next {
  justify-content: flex-end;
  padding-left: 1rem;
  margin-left: auto;
}

.post-comments {
  margin-top: var(--y-gap);
}

@media (max-width: 1199px) {
  .post-title {
    display: block;
  }

  .post-title aside {
    flex-direction: row;
    width: auto;
    padding-right: 0;
    margin-bottom: 0.5rem;
    margin-left: 0;
    transform: none;
  }

  .post-title aside span::before {
    content: '·';
    margin-inline: 0.5rem;
  }
}

/* Post content
 -------------------------------------------------- */
.post-content {
  font-size: 2.2rem;
}

.post-content h1,
.post-content h2,
.post-content h3,
.post-content h4,
.post-content h5,
.post-content h6 {
  margin-block: 2rem;
}

.post-content h1 {
  margin-top: var(--y-gap);
  font-size: 4.5rem;
}

.post-content h2 {
  margin-top: 6rem;
  font-size: 3.5rem;
}

.post-content h3 {
  font-size: 2.5rem;
}

.post-content h4 {
  font-size: 2.2rem;
}

.post-content h5 {
  font-size: 1.8rem;
}

.post-content h6 {
  font-size: 1.5rem;
}

.post-content img {
  margin-inline: auto;
}

.post-content a {
  padding-bottom: 0.2rem;
  font-weight: 500;
  border-bottom: 2px solid var(--pro);
}

.post-content a code {
  margin-inline: 0;
  border-bottom-right-radius: 0;
  border-bottom-left-radius: 0;
}

.post-content del {
  text-decoration: none;
  background: linear-gradient(to right, var(--pro) 100%, transparent 0) 0 50% / 1px 1px repeat-x;
}

.post-content p,
.post-content ul,
.post-content ol,
.post-content dl,
.post-content details {
  margin-bottom: 3rem;
}

.post-content ul,
.post-content ol {
  padding-left: 2.5rem;
}

.post-content li {
  margin-top: 0.6rem;
}

.post-content li p {
  margin-bottom: 0;
}
/* ... */

